# aoc

./: .gitignore  1-1.lisp  README.md  download-input.sh
c/2017/: 1.c  2.c  CMakeLists.txt  utils.c  utils.h
clisp/2016/: 1-1.lisp  1.lisp  2.lisp  3.lisp  4.lisp
cpp/2018/: 1.cpp  1.hpp  2.cpp  CMakeLists.txt  utils.hpp
